--- a/content/sayi/sayi-0/3.md
+++ b/content/sayi/sayi-0/3.md
@@ -44,13 +44,15 @@ tags= [
     </div>
     <div class="col-md-4">
         <h4>4. Sağlarlık (Olur Kılan)</h4>
-        Kısaca, kullanıcı ürüne baktığında gördüğü parçaları, arayüzleri nasıl kullanacağını anlamalıdır; en azından bir fikir edinebilmelidir. Donald Norman olanaklığı yüksek bir objenin görsele, etikete, talimatlara gerek kalmadan objeyi nasıl kullanmak gerektiğinin anlaşılacağını vurguluyor.  
+        Kısaca, kullanıcı ürüne baktığında gördüğü parçaları, arayüzleri nasıl kullanacağını anlamalıdır; en azından bir fikir edinebilmelidir. Donald Norman olanaklığı yüksek bir objenin görsele, etikete, talimatlara gerek kalmadan objeyi nasıl kullanmak gerektiğinin anlaşılacağını vurguluyor.
+        <br>  
         <img class="img-fluid" src="/img/d-norman-kapi.png" alt="">
-        <br> Ör: Kapılar. Kol hizasında yatay bir bar sayesinde itme eylemi. İyi tasarlanmış bir kapı “itiniz” ya da “çekiniz” gibi etiketlere ihtiyaç duymaz.     </div>  
+        <br> <br>
+        Ör: Kapılar. Kol hizasında yatay bir bar sayesinde itme eylemi. İyi tasarlanmış bir kapı “itiniz” ya da “çekiniz” gibi etiketlere ihtiyaç duymaz.     </div>  
     <div class="col-md-4">
         <h4>5. Sabitler (Kısıtlayıcılar) </h4>
        Kullanıcıyı sınırsız işlem yapma olasılığından kurtarmak adına etkileşimlere/ arayüze sınır koymak gereklidir. Dört çeşit kısıtlama vardır: Fiziksel, semantik (anlamsal), kültürel ve mantıksal.  
-***Doğal haritalandırma <b>mantıksal kısıtlayıcılar</b> sağlanarak çalışır. Eğer iki ışık kaynağı ve iki kontrol düğmesi varsa bunlardan sağdaki ampulü sağ düğme, soldaki ampulü sol düğme kontrol etmelidir. Burada ne kültürel ne de fiziksel sınırlar vardır.
+Doğal haritalandırma <b>mantıksal kısıtlayıcılar</b> sağlanarak çalışır. Eğer iki ışık kaynağı ve iki kontrol düğmesi varsa bunlardan sağdaki ampulü sağ düğme, soldaki ampulü sol düğme kontrol etmelidir. Burada ne kültürel ne de fiziksel sınırlar vardır.
     </div>  
     <div class="col-md-4">
         <h4>6. Tutarlılık </h4>
