Markut Sıfırıncı Sayı Çıktı

--- a/content/sayi/sayi-0/0.md
+++ b/content/sayi/sayi-0/0.md
@@ -2,7 +2,7 @@
 title = "Sayı 0 İçindekiler"
 url = "sayi-0"
 description=""
-aciklama="Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar"
+aciklama="Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz..."
 tarih = "ağustos 2020"
 date = "2020-7-1"
 lastmod = "2020-7-5"
