--- a/content/sayi/sayi-0/1.md
+++ b/content/sayi/sayi-0/1.md
@@ -2,7 +2,7 @@
 title = "Giriş"
 url = "sayi-0/giris"
 description=""
-aciklama="Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız sadece kendimize fayda sağlamak değildi."
+aciklama="Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti."
 type="sayfa"
 tarih="Mart 2019"
 date = "2020-3-15"
@@ -14,6 +14,17 @@ tags= [
     "sifir"
 ]
 +++
-<a href="/sayi-0/biz-kimiz" id="next"></a>
-<div class="container mgen"><h1>Giriş</h1><p>Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız sadece kendimize fayda sağlamak değildi. Bizler bir araya gelirken birlikte üretim yapıp insanlara hizmet etmek amacımız vardı. Pandemi sürecinde bir şeyler aksasa da şimdi Markut dergimiz çıkıyor. Biz bi yola çıktık, hatta bu yolun başındayız da diyebiliriz. Bu yolda giderken hem kendimize hem de size çok faydalı olabileceği bir platform olmasını istedik. Bu platformda endüstriyel tasarım ve bunun bağlamında pek çok konuya değinmeye çalışacağız. Kendi ufkumuzu genişletmeye çalışırken belki sizin de ufkunuzu genişletmeye katkı sağlarız. Markut ekibiyle bu heyecanı paylaşmaktan gurur duyuyor ve ilk sayımızla sizi baş başa bırakmak istiyorum. Sağlıcakla kalın.</p>
+<a href="/sayi-0/markut-ekibi" id="next"></a>
+<div class="container mgen"><h1>Giriş</h1><p>
+ Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
+
+Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir. 
+
+Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm birikim değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi yapılacaktır. Buradan alınan bilgiler doğrultusunda günümüz dünyasına çözümler sunulmuş olacaktır.
+
+Öyleyse yaptığımız işin bilincine varalım ve yarının dünyasının yaratılmasına yardımcı olalım.
+
+Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti. Bu platform sayesindeyse ilk adımımızı atmış oluyoruz. Başlıca endüstriyel tasarım olmak üzere tasarım disiplinlerine de değineceğiz. Bu platformla birlikte kendi ufkumuzu genişleteceğimize inanıyor ve size de fayda sağlayacağını temenni ediyoruz. Markut ekibiyle bu heyecanı paylaşmaktan gurur duyuyor ve ilk sayımızla sizi baş başa bırakmak istiyorum. Sağlıcakla kalın.
+
+</p>
 </div>
