--- a/content/sayi/sayi-0/4.md
+++ b/content/sayi/sayi-0/4.md
@@ -9,7 +9,7 @@ date = "2020-3-15"
 lastmod = "2020-5-20"
 sayi="0"
 sayfa="04"
-yazar="Şahsenem Göksu Göktürk"
+yazar="Şahsenem Göksu Göktürk, Kolaj: Zeynep Yarar, Elif Ersöz"
 tags= [
     "sifir"
 ]
@@ -22,14 +22,14 @@ tags= [
         <div class="col-md-4">
         İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon, Ortodoks’lukla birlikte Balkanlar ve Rusya’da da yaygın bir kullanım ve uygulama alanı bulmuştur. Genellikle, ahşap ve levhalar üzerine ankostik boya ile yapılırdı. İkonaların kutsal kabul edilmesi ve sanatsal bir özellik taşıma gerekliliği olmaması onları diğer resimlerden ayıran en önemli farktır. İkonalar sıradan, realizmden uzak, yaşadığımız dünya ile ilgili olmayan yönlerin ortaya çıkarıldığı, sanatsal açının önemli değil ruhsallığın ön plana çıktığı sembolik tasvirlerdir.
         </div>
-        <div class="col-md-4"><img class="img-fluid" src="/img/ikon-kolaj-2.png" alt=""></div>
+        <div class="col-md-4"><img class="img-fluid" src="/img/ikon-kolaj-2.jpg" alt=""></div>
         <div class="col-md-4">
         Geçmişte dinsel içerikli sanat yapıtlarında betimlenen dinsel olay ya da kişileriyle ilgili belli ölçüde standartlaşmış biçim düzeni şeklinde tanımlansa da zamanın ilerlemesi ve teknolojinin hayatımıza hızlı girişiyle birlikte değişen dünyamızda kelimeler de farklı anlamlar kazanıyorlar. Günümüzde ikon sözcüğünü birçok farklı alanda kullanıyoruz. Dijital boyutta, ekranda gösterilen ve tıklandığında belirli yazılım uygulamasını çalıştıran grafik simge olarak da tanımlanıyor. Artık daha basit, anlaşılır ve özgünleşmiş olan ikon sözcüğü teknolojiyle birlikte farklı bir noktaya taşınmıştır.
         </div>
     </div>
     <div class="row">
-        <div class="col-md-8"><img class="img-fluid" src="/img/ikon-kolaj.png" alt=""></div>
-        <div class="col-md-4"><br><br><br><br> Yüzyıllar önce İkonik yaklaşım ise; Bir obje veya olgunun belirgin görünümlerinin görsel tanıtımını yapma ve görsel benzerlikler kurma yolunu kullanan tasarım ilkesidir.
+        <div class="col-md-8"><img class="img-fluid" src="/img/ikon-kolaj.jpg" alt=""></div>
+        <div class="col-md-4"><br><br><br><br>İkonik yaklaşım ise; Bir obje veya olgunun belirgin görünümlerinin görsel tanıtımını yapma ve görsel benzerlikler kurma yolunu kullanan tasarım ilkesidir.
             <br> İkonik tasarımlar, geçmişten günümüze uygarlıkların, ülkelerin simgesi haline gelmiş, bulundukları yerlerin tanıtımında önemli rol oynayıp birer ikon haline gelmiş yapılar, tasarımlardır.
          <br> Çevremizde ikon olmak sözcüğü kullanımını zaman içinde yanlış kullanım yerlerinden dolayı manasını yitirip basit hale getirilse de İkon denildiğinde akla gelen bazı sanatçılar, yapılar, ürünler sayılı olmakla birlikte ortak değer olarak da görülmektedir.      
         </div>
