--- a/content/sayi/sayi-0/6.md
+++ b/content/sayi/sayi-0/6.md
@@ -2,7 +2,7 @@
 title = "İkonik Tasarımlar: Sandalye"
 url = "sayi-0/ikonik-tasarimlar-sandalye"
 description=""
-aciklama=""
+aciklama="Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır."
 type="sayfa"
 tarih="Ağustos 2020"
 date = "2020-3-15"
@@ -20,7 +20,7 @@ tags= [
 <div class="row">
     <div class="col-md-6">
         <h3>X-Chair</h3>
-        <img class="img-fluid" src="/img/x-chair.png" alt=""><br>
+        <img class="img-fluid" src="/img/x-chair.jpg" alt=""><br>
        <p> Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır.
        <br> Orta İtalya'dan gelen önden veya yandan bakıldığında X gibi bir çerçeveye sahip bir tür katlanır sandalye.  İtalya'da Savonarola veya Dante sandalyesi veya Almanya'da Luther sandalyesi olarak da bilinen X sandalyesi, Rönesans Avrupa’sına yayılan hafif, katlanabilir, pratik bir formdur. </p>
     </div>
