--- a/content/sayi/sayi-0/8.md
+++ b/content/sayi/sayi-0/8.md
@@ -10,12 +10,9 @@ lastmod = "2020-5-20"
 sayi="0"
 sayfa="08"
 yorum="var"
+postid = "00"
 yazar="Markut Ekibi"
 tags= [
     "sifir"
 ]
 +++
-
-Burası da olacak inş :)
-
-Yorum Yapmak İster misiniz?
