--- a/content/sayi/sayi-0/2.md
+++ b/content/sayi/sayi-0/2.md
@@ -1,8 +1,8 @@
 +++
-title = "Biz Kimiz"
-url = "sayi-0/biz-kimiz"
+title = "Markut Ekibiyle Tanışın"
+url = "sayi-0/markut-ekibi"
 description=""
-aciklama="Proin tempus sit amet justo in pulvinar. Donec et lacinia risus. Etiam nec dolor elit. In congue enim in felis placerat, eget blandit leo ullamcorper. Suspendisse elementum tellus at ligula hendrerit fringilla."
+aciklama="Markut ekibinden sevgiyle..."
 type="sayfa"
 tarih="Mart 2019"
 date = "2020-3-15"
@@ -15,17 +15,20 @@ tags= [
 ]
 +++
 <a href="/sayi-0/donald-norman" id="next"></a>
- <section>
-        <div class="container mgen">
-            <h1>Markut Ekibine Yakından Bakış</h1>
-            <img class="img-fluid" src="/img/markut-toplanti-1.png" alt="">
-            <div class="row">
-                <div class="offset-6 col-md-6"><br><br>
-                    <h2>Markut 28 Şubat ilk toplantı.</h2>
-                </div> 
-                <div class="col-md-6"><br><br>
-                    <img class="img-fluid" src="/img/markut-toplanti-2.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
+<div class="container">
+<div class="row">
+    <div class="col-md-6"><img class="img-fluid" src="/img/img25.jpg" alt=""> <br><br></div>
+    <div class="col-md-6"><img class="img-fluid" src="/img/img28.jpg" alt=""><br><br></div>
+    <div class="col-md-4"><img class="img-fluid" src="/img/img11.jpg" alt=""><br><br></div>
+    <div class="col-md-8"><img class="img-fluid" src="/img/markut-adada.jpg" alt=""><br><br></div>
+    <div class="col-md-4"><img class="img-fluid" src="/img/img10.jpg" alt=""><br><br></div>
+    <div class="col-md-5"><br><br><img class="img-fluid" src="/img/markut-galeri.jpg" alt=""><br><br></div>
+    <div class="col-md-3"><img class="img-fluid" src="/img/img14.jpg" alt=""><br><br></div>
+    <div class="col-md-6"><img class="img-fluid" src="/img/markut-workshop-2.jpg" alt=""><br><br></div>
+    <div class="col-md-6"><img class="img-fluid" src="/img/IMG_5953.jpg" alt=""><br><br></div>
+</div>
+<h2>Markut ekibinden sevgiyle...</h2>
+<small>
+Arslan Dangatarov | Atahan Göktürk Güner | Deniz Çam | Ece Çelik | Ecem Hasbay | Elif Ersöz | Eylül Ecem Söğütlü | Hilal Doruk | Merve Çetin | Neslişah Bükülmüşkol | Ömer Faruk Çam | Şahsenem Göksu Göktürk | Talha Kadir | Yslamsahat Amangulyev | Zeynep Dağ | Zeynep Yarar
+</small>
+</div>
