--- a/content/sayi/sayi-0/3.md
+++ b/content/sayi/sayi-0/3.md
@@ -15,7 +15,7 @@ tags= [
 ]
 +++
 <a href="/sayi-0/tasarim-sozlugu-ikon" id="next"></a>
-<img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.png" alt="">
+<img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.jpg" alt="">
 <div class="container">
 <h1>Donald Norman ve Tasarım İlkeleri</h1>
 <div class="row">
@@ -30,6 +30,8 @@ tags= [
     <div class="col-md-4">
     <h4>1. Görünür Kılmak</h4>
         Çok fonksiyonlu ürünler arttıkça bazı önemli kısımlar gözden kaçmaya başladı. Kullanıcıya ürünün fonksiyonunu ve nasıl kullanılacağını belli etmek için ilgili parçaların gözün görmesini sağlamak gereklidir. Fakat her parça görünür kılınamaz önem sırası korunmalıdır.  
+    <img class="img-fluid" src="/img/norman-google-search.jpg" alt="">
+    Google Arama arayüzünde nereden arama yapılacağını sadece bakarak anlayabiliriz.
     </div>  
     <div class="col-md-4">
         <h4>2. Haritalama</h4>
@@ -40,25 +42,30 @@ tags= [
     <div class="col-md-4">
         <h4>3. Geri Bildirim</h4>
         Her hareketin karşılığı anında ve bariz biçimde etkili olduğunu anlatmak için bir geri bildirim mekanizmasına ihtiyaç vardır. Kullanıcı yaptığının işe yarayıp yaramadığını, yaradıysa nasıl bir etkisi olduğunu tahmin etmek zorunda bırakılmamalıdır. Görsel, işitsel, dokunsal tepkilerle kullanıcıyla iletişime geçilmelidir. 
-        Ör: Su kaynadığında su ısıtıcısının düğmesinin “atma” sesi <br><br><br>
+<br>
+        <img class="img-fluid" src="/img/tekli-isikli-acma-kapama-anahtari.jpg" alt="">
+        Ör: Su kaynadığında su ısıtıcısının düğmesinin ışığı yanması. 
     </div>
     <div class="col-md-4">
         <h4>4. Sağlarlık (Olur Kılan)</h4>
         Kısaca, kullanıcı ürüne baktığında gördüğü parçaları, arayüzleri nasıl kullanacağını anlamalıdır; en azından bir fikir edinebilmelidir. Donald Norman olanaklığı yüksek bir objenin görsele, etikete, talimatlara gerek kalmadan objeyi nasıl kullanmak gerektiğinin anlaşılacağını vurguluyor.
         <br>  
-        <img class="img-fluid" src="/img/d-norman-kapi.png" alt="">
+        <img class="img-fluid" src="/img/d-norman-kapi.jpg" alt="">
         <br> <br>
         Ör: Kapılar. Kol hizasında yatay bir bar sayesinde itme eylemi. İyi tasarlanmış bir kapı “itiniz” ya da “çekiniz” gibi etiketlere ihtiyaç duymaz.     </div>  
     <div class="col-md-4">
         <h4>5. Sabitler (Kısıtlayıcılar) </h4>
        Kullanıcıyı sınırsız işlem yapma olasılığından kurtarmak adına etkileşimlere/ arayüze sınır koymak gereklidir. Dört çeşit kısıtlama vardır: Fiziksel, semantik (anlamsal), kültürel ve mantıksal.  
 Doğal haritalandırma <b>mantıksal kısıtlayıcılar</b> sağlanarak çalışır. Eğer iki ışık kaynağı ve iki kontrol düğmesi varsa bunlardan sağdaki ampulü sağ düğme, soldaki ampulü sol düğme kontrol etmelidir. Burada ne kültürel ne de fiziksel sınırlar vardır.
+<br><br><img class="img-fluid" src="/img/usb-computer-sabitler.jpg" alt="">
     </div>  
     <div class="col-md-4">
         <h4>6. Tutarlılık </h4>
         Benzer hareketlerin benzer işler için kullanılması; farklı aşamada olunsa da aynı eylemlerin aynı tepkiyi vermesi gerekir. Kullanıcı objeyi/arayüzü öğrenirken paternler oluşturur; bu paternler (örüntüler) kullanıcının hafızasını ya da mantığını zorlamaz.  
         D. Norman: “Açıklayıcı varlıklar olarak insanlar...” 
         Zihnimizde oluşturduğumuz modeller nesnelerin nasıl çalıştığını, olayların nasıl oluştuğunu, insanların nasıl hareket ettiğini anlayabilmemiz için var olan konsept modelleridir. Bu modelleri sahip olduğumuz bilgilerle kuruyoruz. Bu yüzden iyi tasarlanmış tutarlı bir arayüzde yönümüzü kolaylıkla bulabiliriz.     
+       <img class="img-fluid" src="/img/norman-trafik-isiklari.jpg" alt="">
+       Trafik ışıklarının yanma sırası her zaman aynıdır.
     </div>  
 </div><br><br><br>
 <small>Yazı Kaynağı; Norman, Donald Arthur. (2002). The Design of Everyday Things. New York: Basic Books. </small>
