--- a/content/sayi/sayi-0/7.md
+++ b/content/sayi/sayi-0/7.md
@@ -1,8 +1,8 @@
 +++
-title = "MarkutDesign etiketle"
+title = "MarkutWorks etiketle"
 url = "sayi-0/markut-etiketle"
 description=""
-aciklama=""
+aciklama="Instagram'da #MarkutWorks'ü hastagle yeni sayıda yerini al"
 type="sayfa"
 tarih="Ağustos 2020"
 date = "2020-3-15"
@@ -15,4 +15,8 @@ tags= [
 ]
 +++
 <a href="/sayi-0/son " id="next"></a>
-<div class="container"><div style="font-family: roboto condensed; font-size: 64px; letter-spacing: 10px;">Instagramda #MarkutWorks'ü hashtagle yeni sayıda yerini al.</div></div>
+<div class="container text-center">
+<h1>Instagram'da #MarkutWorks'ü hastagle yeni sayıda yerini al</h1>
+<img class="img-fluid" src="/img/markutworks-dream.png" alt=""><br>
+<small>İllustrasyon: Deniz Çam</small>
+</div>
