seo çalışması yaptım.

--- a/content/sayi/sayi-0/0.md
+++ b/content/sayi/sayi-0/0.md
@@ -1,11 +1,10 @@
 +++
 title = "Sayı 0 İçindekiler"
 url = "sayi-0"
-description=""
+description="Markut derginin ilk sayısı 0. sayı çıktı. Endüstriyel tasarım dergimizden ilk sayımızı online ücretsiz okuyabilirsiniz. Görüneni iki veya üç boyutlu aktarmak..."
 aciklama="Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz..."
-tarih = "ağustos 2020"
-date = "2020-7-1"
-lastmod = "2020-7-5"
+tarih="Ağustos 2020"
+date = "2020-8-1"
 kapak = "/img/sayi-0-cover.jpg"
 sayi = "00"
 sayfa="00"
