--- a/content/sayi/sayi-0/3.md
+++ b/content/sayi/sayi-0/3.md
@@ -1,12 +1,11 @@
 +++
 title = "Donald Norman ve Tasarım İlkeleri"
 url = "sayi-0/donald-norman"
-description=""
+description="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır... araştırmaları doğrultusunda bu evrensel tasarım ilkelerini..."
 aciklama="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır. Bilişsel bilim, bilgisayar bilimi ve psikoloji departmanlarında profesörlük geçmişi bulunmaktadır."
 type="sayfa"
-tarih="Mart 2019"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+tarih="Ağustos 2020"
+date = "2020-8-1"
 sayi="0"
 sayfa="03"
 yazar="Hilal Doruk"
