--- a/content/sayi/sayi-0/7.md
+++ b/content/sayi/sayi-0/7.md
@@ -1,12 +1,11 @@
 +++
 title = "MarkutWorks etiketle"
 url = "sayi-0/markut-etiketle"
-description=""
-aciklama="Instagram'da #MarkutWorks'ü hastagle yeni sayıda yerini al"
+description="Instagramda Markutworks'ü etiketleyerek dergimizde yer alın. Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
+aciklama="Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al"
 type="sayfa"
 tarih="Ağustos 2020"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+date = "2020-8-1"
 sayi="0"
 sayfa="07"
 yazar="Markut Ekibi"
@@ -20,3 +19,4 @@ tags= [
 <img class="img-fluid" src="/img/markutworks-dream.png" alt=""><br>
 <small>İllustrasyon: Deniz Çam</small>
 </div>
+ Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. 
