--- a/content/sayi/sayi-0/8.md
+++ b/content/sayi/sayi-0/8.md
@@ -1,12 +1,11 @@
 +++
 title = "Yorumlar"
 url = "sayi-0/son"
-description=""
+description="Markut derginin ilk sayısına gelen yorumlar. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir."
 aciklama=""
 type="sayfa"
 tarih="Ağustos 2020"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+date = "2020-8-1"
 sayi="0"
 sayfa="08"
 yorum="var"
