--- a/content/sayi/sayi-0/2.md
+++ b/content/sayi/sayi-0/2.md
@@ -1,12 +1,11 @@
 +++
 title = "Markut Ekibiyle Tanışın"
 url = "sayi-0/markut-ekibi"
-description=""
+description="Markut ekibiyle tanışın. Markut Ekibinden sevgiyle... Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Markut ekibinden sevgiyle..."
 type="sayfa"
-tarih="Mart 2019"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+tarih="Ağustos 2020"
+date = "2020-8-1"
 sayi="0"
 sayfa="02"
 yazar="Markut Ekibi"
