--- a/content/sayi/sayi-0/5.md
+++ b/content/sayi/sayi-0/5.md
@@ -1,12 +1,11 @@
 +++
 title = "Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi"
 url = "sayi-0/ekoloji-nedir-surdurulebilir-tasarim"
-description=""
+description="Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi. 1870 yılında ilk olarak Alman biyolog Ernst Haeckel, çalışmalarında “ekoloji” kavramını kullanmıştır..."
 aciklama="Sürdürülebilirlik, insanlığın ve gelecek nesillerin gereksinimlerini de göz önünde bulundurarak, geleceği tehlikeye atmadan ihtiyaçların karşılanabilmesidir. Ekoloji ve sürdürülebilirlik birbirleriyle son derece bağlı iki kavramdır..."
 type="sayfa"
 tarih="Ağustos 2020"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+date = "2020-8-1"
 sayi="0"
 sayfa="05"
 yazar="Ece Çelik"
