--- a/content/sayi/sayi-0/6.md
+++ b/content/sayi/sayi-0/6.md
@@ -1,12 +1,11 @@
 +++
 title = "İkonik Tasarımlar: Sandalye"
 url = "sayi-0/ikonik-tasarimlar-sandalye"
-description=""
+description="İkonik sandalyelerden 12 tanesine bu sayımızda yer verdik. Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilya ürünüdür..."
 aciklama="Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır."
 type="sayfa"
 tarih="Ağustos 2020"
-date = "2020-3-15"
-lastmod = "2020-5-20"
+date = "2020-8-1"
 sayi="0"
 sayfa="06"
 yazar="Zeynep Dağ"
