etiketler sayfasi oluşturdum

--- a/content/sayi/sayi-0/1.md
+++ b/content/sayi/sayi-0/1.md
@@ -1,11 +1,12 @@
 +++
 title = "Giriş"
 url = "sayi-0/giris"
+date = "2020-08-01"
 description="Markut giriş yazısı. Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır..."
 aciklama="Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti."
 type="sayfa"
+thumb="/img/img25.jpg"
 tarih="Ağustos 2020"
-date = "2020-8-1"
 sayi="0"
 sayfa="01"
 yazar="Atahan Göktürk Güner"
