--- a/content/sayi/sayi-0/2.md
+++ b/content/sayi/sayi-0/2.md
@@ -4,8 +4,9 @@ url = "sayi-0/markut-ekibi"
 description="Markut ekibiyle tanışın. Markut Ekibinden sevgiyle... Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Markut ekibinden sevgiyle..."
 type="sayfa"
+thumb="/img/img28.jpg"
 tarih="Ağustos 2020"
-date = "2020-8-1"
+date = "2020-08-01"
 sayi="0"
 sayfa="02"
 yazar="Markut Ekibi"
