--- a/content/sayi/sayi-0/3.md
+++ b/content/sayi/sayi-0/3.md
@@ -4,13 +4,14 @@ url = "sayi-0/donald-norman"
 description="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır... araştırmaları doğrultusunda bu evrensel tasarım ilkelerini..."
 aciklama="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır. Bilişsel bilim, bilgisayar bilimi ve psikoloji departmanlarında profesörlük geçmişi bulunmaktadır."
 type="sayfa"
+thumb="/img/Zachary_Monteiro_Don_Norman_UX.jpg"
 tarih="Ağustos 2020"
-date = "2020-8-1"
+date = "2020-08-01"
 sayi="0"
 sayfa="03"
 yazar="Hilal Doruk"
 tags= [
-    "sifir"
+    "sifir", "tasarim ilkeleri", "Donald Norman"
 ]
 +++
 <a href="/sayi-0/tasarim-sozlugu-ikon" id="next"></a>
