--- a/content/sayi/sayi-0/0.md
+++ b/content/sayi/sayi-0/0.md
@@ -4,8 +4,10 @@ url = "sayi-0"
 description="Markut derginin ilk sayısı 0. sayı çıktı. Endüstriyel tasarım dergimizden ilk sayımızı online ücretsiz okuyabilirsiniz. Görüneni iki veya üç boyutlu aktarmak..."
 aciklama="Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz..."
 tarih="Ağustos 2020"
-date = "2020-8-1"
+date = "2020-08-01"
+thumb="/img/sayi-0-cover.jpg"
 kapak = "/img/sayi-0-cover.jpg"
+yazar="Markut"
 sayi = "00"
 sayfa="00"
 type= "kapak"
