--- a/content/sayi/sayi-0/4.md
+++ b/content/sayi/sayi-0/4.md
@@ -4,13 +4,14 @@ url = "sayi-0/tasarim-sozlugu-ikon"
 description="İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon..."
 aciklama="İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon, Ortodoks’lukla birlikte Balkanlar ve Rusya’da da yaygın bir kullanım ve uygulama alanı bulmuştur."
 type="sayfa"
+thumb="/img/ikon-kolaj.jpg"
 tarih="Ağustos 2020"
-date = "2020-8-1"
+date = "2020-08-01"
 sayi="0"
 sayfa="04"
 yazar="Şahsenem Göksu Göktürk, Kolaj: Zeynep Yarar, Elif Ersöz"
 tags= [
-    "sifir"
+    "sifir", "tasarim sozlugu", "ikonik"
 ]
 +++
 <a href="/sayi-0/ekoloji-nedir-surdurulebilir-tasarim" id="next"></a>
