--- a/content/sayi/sayi-0/7.md
+++ b/content/sayi/sayi-0/7.md
@@ -4,8 +4,9 @@ url = "sayi-0/markut-etiketle"
 description="Instagramda Markutworks'ü etiketleyerek dergimizde yer alın. Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al"
 type="sayfa"
+thumb="/img/markutworks-dream.png"
 tarih="Ağustos 2020"
-date = "2020-8-1"
+date = "2020-08-01"
 sayi="0"
 sayfa="07"
 yazar="Markut Ekibi"
