--- a/content/sayi/sayi-0/1.md
+++ b/content/sayi/sayi-0/1.md
@@ -1,6 +1,6 @@
 +++
 title = "Giriş"
-url = "sayi-0/giris"
+url = "sayi-0/giris/"
 date = "2020-08-01"
 description="Markut giriş yazısı. Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır..."
 aciklama="Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti."
@@ -14,7 +14,7 @@ tags= [
     "sifir"
 ]
 +++
-<a href="/sayi-0/markut-ekibi" id="next"></a>
+<a href="/sayi-0/markut-ekibi/" id="next"></a>
 <div class="container mgen"><h1>Giriş</h1><p>
  Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
 
