--- a/content/sayi/sayi-0/2.md
+++ b/content/sayi/sayi-0/2.md
@@ -1,6 +1,6 @@
 +++
 title = "Markut Ekibiyle Tanışın"
-url = "sayi-0/markut-ekibi"
+url = "sayi-0/markut-ekibi/"
 description="Markut ekibiyle tanışın. Markut Ekibinden sevgiyle... Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Markut ekibinden sevgiyle..."
 type="sayfa"
@@ -14,7 +14,7 @@ tags= [
     "sifir"
 ]
 +++
-<a href="/sayi-0/donald-norman" id="next"></a>
+<a href="/sayi-0/donald-norman/" id="next"></a>
 <div class="container">
 <div class="row">
     <div class="col-md-6"><img class="img-fluid" src="/img/img25.jpg" alt=""> <br><br></div>
