--- a/content/sayi/sayi-0/3.md
+++ b/content/sayi/sayi-0/3.md
@@ -1,6 +1,6 @@
 +++
 title = "Donald Norman ve Tasarım İlkeleri"
-url = "sayi-0/donald-norman"
+url = "sayi-0/donald-norman/"
 description="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır... araştırmaları doğrultusunda bu evrensel tasarım ilkelerini..."
 aciklama="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır. Bilişsel bilim, bilgisayar bilimi ve psikoloji departmanlarında profesörlük geçmişi bulunmaktadır."
 type="sayfa"
@@ -14,7 +14,7 @@ tags= [
     "sifir", "tasarim ilkeleri", "Donald Norman"
 ]
 +++
-<a href="/sayi-0/tasarim-sozlugu-ikon" id="next"></a>
+<a href="/sayi-0/tasarim-sozlugu-ikon/" id="next"></a>
 <img class="img-fluid" src="/img/Zachary_Monteiro_Don_Norman_UX.jpg" alt="">
 <div class="container">
 <h1>Donald Norman ve Tasarım İlkeleri</h1>
