--- a/content/sayi/sayi-0/6.md
+++ b/content/sayi/sayi-0/6.md
@@ -1,6 +1,6 @@
 +++
 title = "İkonik Tasarımlar: Sandalye"
-url = "sayi-0/ikonik-tasarimlar-sandalye"
+url = "sayi-0/ikonik-tasarimlar-sandalye/"
 description="İkonik sandalyelerden 12 tanesine bu sayımızda yer verdik. Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilya ürünüdür..."
 aciklama="Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır."
 type="sayfa"
@@ -14,7 +14,7 @@ tags= [
     "sifir", "ikonik"
 ]
 +++
-<a href="/sayi-0/markut-etiketle" id="next"></a>
+<a href="/sayi-0/markut-etiketle/" id="next"></a>
 <div class="container">
 <h1>12 İkonik Sandalye</h1>
 <div class="row">
