--- a/content/sayi/sayi-0/7.md
+++ b/content/sayi/sayi-0/7.md
@@ -1,6 +1,6 @@
 +++
 title = "MarkutWorks etiketle"
-url = "sayi-0/markut-etiketle"
+url = "sayi-0/markut-etiketle/"
 description="Instagramda Markutworks'ü etiketleyerek dergimizde yer alın. Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al"
 type="sayfa"
@@ -14,7 +14,7 @@ tags= [
     "sifir"
 ]
 +++
-<a href="/sayi-0/son " id="next"></a>
+<a href="/sayi-0/son/ " id="next"></a>
 <div class="container text-center">
 <h1>Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al</h1>
 <img class="img-fluid" src="/img/markutworks-dream.png" alt=""><br>
