Seo title Ekledim

--- a/content/sayi/sayi-0/1.md
+++ b/content/sayi/sayi-0/1.md
@@ -2,6 +2,7 @@
 title = "Giriş"
 url = "sayi-0/giris/"
 date = "2020-08-01"
+seotitle = "Markut Endüstriyel Tasarım Dergisinin Giriş Yazısı"
 description="Markut giriş yazısı. Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır..."
 aciklama="Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti."
 type="sayfa"
