--- a/content/sayi/sayi-0/5.md
+++ b/content/sayi/sayi-0/5.md
@@ -1,6 +1,7 @@
 +++
 title = "Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi"
 url = "sayi-0/ekoloji-nedir-surdurulebilir-tasarim/"
+seotitle= "Ekoloji Nedir? Sürdürülebilir Tasarım Makalesi"
 description="Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi. 1870 yılında ilk olarak Alman biyolog Ernst Haeckel, çalışmalarında “ekoloji” kavramını kullanmıştır..."
 aciklama="Sürdürülebilirlik, insanlığın ve gelecek nesillerin gereksinimlerini de göz önünde bulundurarak, geleceği tehlikeye atmadan ihtiyaçların karşılanabilmesidir. Ekoloji ve sürdürülebilirlik birbirleriyle son derece bağlı iki kavramdır..."
 thumb="/img/peel-saver-packaging.jpg"
