--- a/content/sayi/sayi-0/7.md
+++ b/content/sayi/sayi-0/7.md
@@ -1,6 +1,7 @@
 +++
-title = "MarkutWorks etiketle"
+title = "MarkutWorks Etiketle"
 url = "sayi-0/markut-etiketle/"
+seotitle="Markutworks Hashtagle Dergide Yerini Al"
 description="Instagramda Markutworks'ü etiketleyerek dergimizde yer alın. Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir."
 aciklama="Instagram'da #MarkutWorks'ü hashtagle yeni sayıda yerini al"
 type="sayfa"
