--- a/content/sayi/sayi-0/8.md
+++ b/content/sayi/sayi-0/8.md
@@ -1,5 +1,6 @@
 +++
 title = "Yorumlar"
+seotitle= "Markut Dergiye Gelen Yorumlar"
 url = "sayi-0/son/"
 description="Markut derginin ilk sayısına gelen yorumlar. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir."
 aciklama=""
