--- a/content/sayi/sayi-0/5.md
+++ b/content/sayi/sayi-0/5.md
@@ -1,18 +1,18 @@
 +++
 title = "Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi"
 url = "sayi-0/ekoloji-nedir-surdurulebilir-tasarim/"
-seotitle= "Ekoloji Nedir? Sürdürülebilir Tasarım Makalesi"
+seotitle= "Ekoloji Nedir? Sürdürülebilir Tasarım İlkeleri"
 description="Ekoloji Nedir? Sürdürülebilirlik ve Tasarımcı İlişkisi. 1870 yılında ilk olarak Alman biyolog Ernst Haeckel, çalışmalarında “ekoloji” kavramını kullanmıştır..."
 aciklama="Sürdürülebilirlik, insanlığın ve gelecek nesillerin gereksinimlerini de göz önünde bulundurarak, geleceği tehlikeye atmadan ihtiyaçların karşılanabilmesidir. Ekoloji ve sürdürülebilirlik birbirleriyle son derece bağlı iki kavramdır..."
 thumb="/img/peel-saver-packaging.jpg"
 type="sayfa"
 tarih="Ağustos 2020"
 date = "2020-08-01"
-sayi="0"
+sayi="00"
 sayfa="05"
 yazar="Ece Çelik"
 tags= [
-    "sifir", "ekoloji", "surdurulebilir tasarim"
+"sifir", "ekoloji", "surdurulebilir tasarim", "Öne Çıkan", "Sayi Sifir"
 ]
 +++
 <a href="/sayi-0/ikonik-tasarimlar-sandalye/" id="next"></a>
