--- a/content/sayi/sayi-0/6.md
+++ b/content/sayi/sayi-0/6.md
@@ -1,18 +1,18 @@
 +++
 title = "İkonik Tasarımlar: Sandalye"
 url = "sayi-0/ikonik-tasarimlar-sandalye/"
-seotitle = "İkonik Sandalyeler - En Bilindik 12 Sandalye Modeli"
+seotitle = "İkonik Sandalye Tasarımları - 12 Sandalye Modeli"
 description="İkonik sandalyelerden 12 tanesine bu sayımızda yer verdik. Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilya ürünüdür..."
 aciklama="Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır."
 type="sayfa"
-thumb="/img/cabaret-chair-thonet.jpg"
+thumb="/img/barcelona-chair-thumb.jpg"
 tarih="Ağustos 2020"
 date = "2020-08-01"
-sayi="0"
+sayi="00"
 sayfa="06"
 yazar="Zeynep Dağ"
 tags= [
-    "sifir", "ikonik"
+    "sifir", "ikonik", "Öne Çıkan", "Sayi Sifir"
 ]
 +++
 <a href="/sayi-0/markut-etiketle/" id="next"></a>
