--- a/content/sayi/sayi-1/3.md
+++ b/content/sayi/sayi-1/3.md
@@ -29,7 +29,7 @@ tags= [
             <p>Endüstri Devrimi sonrası dünyada yaşanan çevresel, sosyal ve ekonomik problemler insanları çözüm önerileri aramaya götürmektedir. Bu noktada karşımıza çıkan ve son kırk yılda bütün dünya tarafından konuşulmakta olan bir kavram mevcuttur: ‘Sürdürülebilirlik’.</p>
         </div>
         <div class="col-md-6">
-            <img class="img-fluid" src="/img/Sustainability-juisa-jung.jpg" alt=""><small>illustration: <a href="https://luisajung.com/portfolio-item/sustainability/" target="_blank" rel="noopener noreferrer">Luisa Jung</a></small> 
+            <img class="img-fluid" src="/img/Sustainability-juisa-jung.jpg" alt="Sürdürülebilirlik Illustrasyon Tasarımı: Luisa Jung"><small>illustration: <a href="https://luisajung.com/portfolio-item/sustainability/" target="_blank" rel="noopener noreferrer">Luisa Jung</a></small> 
             <p>Doğal veya yapay, her türlü sistemin varlığını devam ettirmesi için kendisini yenilemesi sürdürülebilirlik olarak adlandırılmaktadır. Sürdürülebilirliği D. Martin (2012, s. 2), “Bir sistemin hayatını devam ettirebilmesi için sürekli olarak kendi kendini yenilemesi yeteneğidir.” şeklinde tanımlamaktadır. Bu tanıma ek olarak sürdürülebilirlik, doğal sistem ve insan eliyle üretilen tüm sistemlerin; kesintiye uğramadan, aşırı kullanım ile zarar verilmeden ve israf edilmeden varlığını devam ettirmesidir (Sezgin ve Abdullah 2008, s.429).</p>
         </div>
     </div>
@@ -52,7 +52,7 @@ tags= [
         <div class="col-md-4">
             <p>Ambalaj tasarımı, ambalajlama malzemesini seçme, hangi grafik tekniklerini kullanacağına karar verme ve fotoğraf ile illüstrasyonun doğruluğunu karşılaştırma konusundaki kritik konuyla ilgili pratik bilgileri de kapsamakla birlikte bu tasarım pratikleri ile yardımcı tasarım elemanlarını birbirine bağlayan, yaratma yeteneğine sahip bir uğraştır (Klimchuk ve Krasovec, 2006).</p>
         </div>
-        <div class="col-md-8"><img class="img-fluid" src="/img/Eapco8WXkAA08iM.jpg" alt=""></div>
+        <div class="col-md-8"><img class="img-fluid" src="/img/Eapco8WXkAA08iM.jpg" alt="Plastik Atıkların Doğdaki Sonucu"></div>
     </div>
     <h2>Sürdürülebilir Ambalaj Hangi Özellikleri Taşımalı</h2>
     <div class="row">
@@ -78,10 +78,10 @@ tags= [
    <div class="row">
        <div class="col-md-5"> <p>Ambalaj tasarımında malzeme seçimi en önemli adımlardan biridir. Malzeme seçimi yapılırken en dikkat edilmesi gereken konu ise atık yönetiminin iyi planlanmasıdır. Sürdürülebilir ambalaj denince akla ilk gelen kuşkusuz geri dönüştürülebilir olmasıdır. Ancak iyi bir atık yönetimi için geri dönüşüm tek başına bir çözüm değildir. Pek çok geri dönüştürülebilir ambalaj hem tasarım hem tüketici hatasıyla geri dönüştürülemez hale gelmektedir. Atık yönetimi piramidi bize bu konuda rehberlik edebilir. Piramidin en üstünde önleme daha sonra azaltma, tekrar kullanım, geri dönüşüm, enerji kazanımı ve bertaraf etme gelmektedir. Bu sıralama bizi en öncelikli seçenekten en son seçeneğe götürür. Bu seçenekleri bir arada kullanmak da mümkündür elbette. Ambalaj tasarımı yapılırken hem hacimden hem malzemeden tasarrufa gidilerek çıkacak olan atık miktarı azaltılabilir, tasarlanan ambalaj tekrar kullanılabilir ve en sonunda da geri dönüşüme gidebilir. </p>
        </div>
-       <div class="col-md-7 mt-5"><img class="img-fluid" src="/img/atik-yonetimi-piramidi.jpg" alt=""><small class="text-right">Şekil 1: Atık Yönetimi Piramidi</small></div>
+       <div class="col-md-7 mt-5"><img class="img-fluid" src="/img/atik-yonetimi-piramidi.jpg" alt="Atık Yönetimi Piramidi"><small class="text-right">Şekil 1: Atık Yönetimi Piramidi</small><br><br></div>
    </div> 
    <div class="row">
-    <div class="col-md-7"><img class="img-fluid" src="/img/garcon-wines-design.jpg" alt=""></div>
+    <div class="col-md-7"><img class="img-fluid" src="/img/garcon-wines-design.jpg" alt="Garcon Wines Ambalaj Tasarımı"></div>
        <div class="col-md-5"><p>Sürdürülebilir ambalaj tasarımında bir diğer önemli nokta ise hem üretim hem dağıtım süreçlerinde harcanan
         enerjiyi minimuma indirmek ve karbon ayak izini azaltmaktır. Bu hususta yenilenebilir eneri kaynakları
         kullanmanın yanı sıra ambalajların boyutları, miktarı, ambalajda ürün dizilimi de oldukça önemlidir. Garçon
@@ -89,12 +89,12 @@ tags= [
         ve buna bağlı karbon ayak izini minimuma indirmek için alışılmışın dışında düz şarap şişeleri tasarladı ve ürün
         dizilimini bu şişelerin boyutlarını hesaba katarak değiştirdi. Bu ambalaj tasarımı minimum alanla maksimum ürün
         sevkiyatı sağladı ve hem ambalaj miktarını azaltmış hem de taşımada harcanan enerjiyi minimuma indirmiş oldu.
-        <img class="img-fluid" src="/img/garcon-wines-design-up-side.jpg" alt="">
+        <img class="img-fluid" src="/img/garcon-wines-design-up-side.jpg" alt="Garcon Wines Ambalaj Tasarımı Üst Görünüş">
     </p></div>
-    <div class="col-md-6"><img class="img-fluid" src="/img/mode-tea-ambalaj.jpg" alt="">
+    <div class="col-md-6"><img class="img-fluid" src="/img/mode-tea-ambalaj.jpg" alt="Mode Tea Ambalaj tasarımı">
         <small>Adam Law tarafından tasarlandı</small>
         <p>Mode Tea ambalaj örneği: tamamen geri dönüştürülebilen veya yeniden kullanılabilen bir ambalaj planı tasarlandı. Önerilen malzemelerin tümü sürdürülebilir kaynaklardan gelecektir ve çevreye zarar vermeyecektir.</p></div>
-        <div class="col-md-6"><img class="img-fluid" src="/img/teatul-ambalaj.jpg" alt="">
+        <div class="col-md-6"><img class="img-fluid" src="/img/teatul-ambalaj.jpg" alt="Teatul Ambalaj Tasarımı">
             <small>Khadia Ulumbekova tarafından tasarlandı</small>
         <p>Teatul ambalaj örneği: Daha az enerji ve kimyasal gerektiren doğal, çevre dostu renkler ve dokular kullanıldı. Doğaya azami özen gösterilerek tasarlandı.</p></div>
        </div>
@@ -106,7 +106,7 @@ tags= [
         rekabet avantajını kaybetme kaygısı gelmektedir. Bir diğer engel ise bilinçsiz tüketici kitlesidir. Amaçlanan
         hedeflerin başarıya ulaşması için, devlet teşviği sağlanması, sürdürülebilir ambalajın öneminin ve gerekliğinin
         önce işletmelerce kabul görmesi ve ardından da geniş kitlelere anlatılması gerekmektedir. </p></div>
-    <div class="col-md-6"><br><img class="img-fluid" src="/img/ambalaj-atiklari.jpg" alt=""><small>Ambalaj Atıkları Beyan Sistemine Göre Yıllar İtibariyle Piyasaya Sürülen Ambalaj Miktarı ve Geri Kazanılan Ambalaj Atığı Miktarı <a href="https://cevreselgostergeler.csb.gov.tr/ambalaj-atiklari-i-85757" target="_blank" rel="noopener noreferrer">Kaynak: Çevresel Göstergeler</a></small></div>
+    <div class="col-md-6"><br><img class="img-fluid" src="/img/ambalaj-atiklari.jpg" alt="Ambalaj Atıkları Beyan Sistemine Göre Yıllar İtibariyle Piyasaya Sürülen Ambalaj Miktarı ve Geri Kazanılan Ambalaj Atığı Miktarı"><small>Ambalaj Atıkları Beyan Sistemine Göre Yıllar İtibariyle Piyasaya Sürülen Ambalaj Miktarı ve Geri Kazanılan Ambalaj Atığı Miktarı <a href="https://cevreselgostergeler.csb.gov.tr/ambalaj-atiklari-i-85757" target="_blank" rel="noopener noreferrer">Kaynak: Çevresel Göstergeler</a></small></div>
 </div>
    
 <div class="mt-5 kaynak">
