--- a/content/sayi/sayi-1/6.md
+++ b/content/sayi/sayi-1/6.md
@@ -9,7 +9,7 @@ thumb="/img/composition-thumbnail.jpg"
 tarih="Eylül 2020"
 sayi="01"
 sayfa="06"
-yazar="Şahsenem Göksu Göktürk"
+yazar="Şahsenem Göksu Göktürk, Atahan Göktürk Güner"
 type="sayfa"
 tags= [
 "bir", "Sayi Bir", "tasarim sozlugu" 
