--- a/content/sayi/sayi-1/7.md
+++ b/content/sayi/sayi-1/7.md
@@ -15,7 +15,7 @@ tags= [
 "bir", "Sayi Bir"
 ]
 +++
-
+<a href="/sayi-1/yorumlar/" id="next"></a>
 <div class="container">
     <div class="row">
         <div class="col-md-5"><p>MARKUT bir endüstriyel tasarım dergisidir. Endüstriyel tasarım ise bir çok disiplini içerisinde barındıran bir alandır. Endüstriyel tasarım denince endüstride lokomotif görevi gören otomotiv endüstrisine yer vermemek bu dergini editörlerine yakışmazdı.</p>
