--- a/content/sayi/sayi-1/5.md
+++ b/content/sayi/sayi-1/5.md
@@ -4,7 +4,7 @@ url = "sayi-1/dijitallesmenin-kullanici-deneyimi-üzerindeki-etkisi/"
 date = "2020-08-31"
 seotitle = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
 description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. Kullanıcı deneyimi sağlama unsurları nelerdir? Kullanıcı Deneyimi algıları neler?"
-aciklama="Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün değil."
+aciklama="Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz. Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün değil."
 thumb="/img/dijitale-yolculuk-thumbnail.jpg"
 tarih="Eylül 2020"
 sayi="01"
@@ -19,13 +19,13 @@ tags= [
 <div class="container">
     <div class="text-center"><img class="img-fluid" src="/img/evolution-desk.gif" alt=""></div>
     <div class="row">
-     <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt=""></div>
      <div class="col-md-6">  <p>Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz.
         Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün
         değil. Bu gelişim ile bilgisayarlar, insanların analog dünyalarına ‘’dijitalleşmeyi’’ getirdi. Dijitalleşmeden
         önce insanlar, ürünlerle üretmek veya tüketmek için fiziksel olarak etkileşime giriyordu. Fakat bilgisayarların
         insanların hayatına girmesiyle birlikte bilgisayarlar fiziksel ürünlerle birleşti ve dijital ürünler ortaya
         çıktı. Bu da kullanıcıların ürünlerle etkileşimini büyük ölçüde değiştirdi.</p></div>
+        <div class="col-md-6"><br><br><img class="img-fluid" src="/img/urunlerde-dijitallesme.png" alt=""><br><br></div>
     </div>
 <div class="row">
     <div class="col-md-6"><p>Dijital bir dergi olarak fizikselden dijitale dönen ürünlerin canlı bir örneğiyiz. Bunun yanı sıra e-kitaplar
@@ -35,7 +35,7 @@ tags= [
         <p>Bu dönüşüm kullanıcı için olumlu ve olumsuz etkiler yarattı. Günümüzde dijital kullanıcı deneyimindeki
             olumsuzlukların en öne çıkan nedenlerinden biri tüm kullanıcıları ortalama bir kullanıcıya indirgemek.
             ‘’Ortalama kullanıcıya’’ seslenen ürün ve hizmetler çoğu zaman kullanıcının dahi farkına varamadığı
-            olumsuzluklar yaratmakta. Örneğin, dokunmatik telefonlar ileri yaştaki kullanıcılar için zorlu bir deneyim
+            olumsuzluklar oluşturdu. Örneğin, dokunmatik telefonlar ileri yaştaki kullanıcılar için zorlu bir deneyim
             sunuyor. Tuşlu telefonlarda fiziksel olarak tuşun bulunması, belli bir tuşun tek bir işlevi gerçekleştiriyor
             oluşu ve fiziksel bir tuşa basıldığındaki geri bildirim dokunmatik ekranlarda farklılıklara sebep oluyor.
             Dokunmatik telefonlarda iyi bir arayüz tasarımı ve dokunulduğunda titreşim olması kullanıcı için yine de yeterli
@@ -45,7 +45,7 @@ tags= [
             kullanıcı deneyimi, kullanıcıların ürün ile etkileşimde bulunurken ki algıların toplamıdır. Bu algılar:
         </p></div>
         <div class="col-md-6"><br><img class="img-fluid" src="/img/dijitale-yolculuk.png" alt=""></div>
-</div>
+</div><br><br>
     <ul>
         <li><b>Etkinlik</b> (Sonuç ne kadar iyi?)</li>
         <li><b>Verimlilik</b> (Fiyat/performans oranı nasıl?)</li>
